# mech

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
include/: item.hpp
src/: item.cpp
test/: test.cpp
